--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
   "dependencies": {
     "@aspida/axios": "^1.9.1",
     "@aspida/swr": "^1.9.1",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.1",
     "@prisma/client": "^3.9.1",
     "axios": "^0.25.0",
     "class-transformer": "^0.5.1",
@@ -48,6 +51,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "reflect-metadata": "^0.1.13",
+    "styled-components": "^5.3.5",
     "swr": "^1.2.1"
   },
   "devDependencies": {
@@ -56,6 +60,7 @@
     "@types/node": "^17.0.15",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "babel-jest": "^27.5.0",
